# RPP-Sims

./: README.md
GEANT4/: 2Dplotter.py  2Dplotter_2.py  arrow_generator.py  beam.py  beam2.py  beam2_1.py  beam3.py  beam_density_calc.py  cluster_generator.py  data_left.txt  data_right.txt  e-_emission.py  electron_emission.py  element data.txt  field_designer.py  geant4py_test.py  geant4py_tutorial.py  geom_constructor.py  plotter.py  system_main.py  time_analysis_ENERGIES.txt  time_analysis_TIMES.txt  time_analysis_TIMES_MEANS  visualizer.py
GEANT4/DATA/beam_design/: pop_vs_E_values.txt
GEANT4/RESULTS/: README.md  results_10212019_1.txt
GEANT4/RESULTS/DATA/bad_good_bad/: README.md
GEANT4/UNUSED/: data_left.txt  geant4py_tutorial.py  stevan_ars.ps
GEANT4/archives/: primary_generator_manager.py  time_analysis_ENERGIES.txt
GEANT4/archives/DATA/beam_design/: pop_vs_E_values.txt
GEANT4/archives/RESULTS/DATA/: README.md
GEANT4/archives/RESULTS/best_clusters/: README.md
GEANT4/archives/UNUSED/: geant4_test_1.cpp  geant4py_test.py
GEANT4/archives/unrelated_to_time/: data_right.txt
GEANT4/module/: CMakeLists.txt  MyDetectorConstruction.cc  MyDetectorConstruction.hh  pyG4QuadrupoleMagField.cc
Report/: Final Report.docx
